# tgs-verify

./: LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml  tgs_verify.py
.github/workflows/: verify.yml
examples/: manifest.json
